@@ -1,0 +1,69 @@
+<h1>東京瘋狂一周！遊戲展、煙花節、啤酒節等你來</h1>
+<p>東京瘋狂一周！遊戲展、煙花節、啤酒節等你來</p>
+<p></p>
+<p>本周的東京將會是一個充滿娛樂和文化的瘋狂一周！除了東京電玩展（Tokyo Game Show）之外，你還可以欣賞煙花、沉浸在文化節日中、在橫濱品嚐啤酒，或者在品川和池袋觀賞傳統遊行。</p>
+<p></p>
+<p>無論你喜歡什麼，都會有一個適合你的活動。以下是本周的活動列表：</p>
+<p></p>
+<p>**北區煙花節**</p>
+<p></p>
+<p>在秋天的傍晚，阿卡班附近的荒川河畔將會舉行煙花節。煙花將在下午6:30開始，約10,000發煙花將在天空中綻放，直到晚上7:30結束。</p>
+<p></p>
+<p>**大國魂神社秋季祭/栗子節**</p>
+<p></p>
+<p>這個節日有著悠久的歷史，可以追溯到1738年。除了品嚐栗子之外，260盞紙燈籠將會點亮整個區域。從1925年開始，燈籠上就有手繪圖畫，非常有趣。</p>
+<p></p>
+<p>**ふくろ祭り（神輿）**</p>
+<p></p>
+<p>ふくろ祭り始於1968年，是池袋站西側四個當地購物區的宣傳活動。自那時起，它已經成長為該地區最大的活動之一。節日包括開幕式、神輿遊行、太鼓表演、獅子舞、林囃子音樂、夜來祭舞蹈和沖繩Eisa舞蹈表演。</p>
+<p></p>
+<p>**東京電玩展**</p>
+<p></p>
+<p>東京電玩展仍然是世界上最頂尖的遊戲展之一。雖然前兩天只對業界人士、影響者和媒體開放，但第三天和第四天將對所有人開放。展覽規模龐大，包括所有主要遊戲發行商、遊戲機製造商和手機遊戲平台的展位，以及一些獨立遊戲和國際展位。</p>
+<p></p>
+<p>預售票價：¥3,000</p>
+<p></p>
+<p>**日韓交流祭**</p>
+<p></p>
+<p>日韓交流祭（Nikkan Kōryu Matsuri）是同時在東京和首爾舉行的活動，旨在加強日本和韓國之間的關係。</p>
+<p></p>
+<p>**紅蜘蛛百合節**</p>
+<p></p>
+<p>隨著蜘蛛百合的盛開，人們再次聚集。紅蜘蛛百合或曼珠沙華（曼珠沙華）已經是一種漂亮的小植物，在埼玉縣日高的巾着田中形成了一個令人印象深刻的色彩毯。</p>
+<p></p>
+<p>門票：¥500</p>
+<p>東京瘋狂一周！遊戲展、煙花節、啤酒節等你來</p>
+<p></p>
+<p>東京這個城市，總是充滿著令人興奮的活動和節慶。這一周，東京將迎來多個精彩的活動，包括東京電玩展、煙花節、啤酒節等，讓你體驗到東京的多彩生活。</p>
+<p></p>
+<p>六本木藝術之夜</p>
+<p></p>
+<p>六本木藝術之夜（Roppongi Art Night）已經成為東京最大的藝術活動之一。這個活動的參與人數不斷增加，活動的規模、裝置、子活動和表演也越來越多。六本木希爾斯競技場將被大型彩色泡泡佔據，東京中城的2D和3D霓虹燈將閃耀著光芒。還有，別忘了在Lapiros六本木的大型香蕉皮！</p>
+<p></p>
+<p>品川宿場祭</p>
+<p></p>
+<p>品川宿場祭（Shinagawa Shukuba Festival）是慶祝品川作為東海道第一個休息站的歷史的節慶。這是當地人穿上盛裝，扮成武士、藝妓、娼妓和其他歷史人物的好藉口。</p>
+<p></p>
+<p>純素美食節秋季</p>
+<p></p>
+<p>這是日本最大的植物性節慶。東京和日本一直被認為對純素食和素食的餐廳和食品選擇不佳。但是，時代正在改變，像純素美食節這樣的活動使得不吃肉變得更加容易。</p>
+<p></p>
+<p>印度節</p>
+<p></p>
+<p>印度節（Namaste India）將回到代代木公園的活動廣場。將會有大量不同的食品和飲料攤位、音樂表演、講座和其他展示。週六和週日都有安排表演，預計將有20萬名遊客參加。</p>
+<p></p>
+<p>橫濱啤酒節</p>
+<p></p>
+<p>橫濱啤酒節（Yokohama Oktoberfest）回來了！讓我們在橫濱紅磚倉庫活動空間喝點啤酒，唱著傳統音樂，度過一個愉快的下午。</p>
+<p></p>
+<p>阿卡希爾音樂週</p>
+<p></p>
+<p>阿卡希爾音樂週（Ark Hills Music Week）將在港區各地舉行，包括三得利音樂廳和阿卡希爾卡拉揚廣場。當你走在鎮上時，你將會聽到來自各個地方的音樂。將會有免費的音樂會、互動體驗等。</p>
+<p></p>
+<p>歡迎回來燕子堂藝術展</p>
+<p></p>
+<p>在谷中的澤之屋旅館，欣賞當地藝術家埃里卡·沃德和酒井貴生的美麗插畫和雕塑，以及調香師Kō的香水。在努力保存傳統日本旅館澤之屋的魅力和吸引旅行者的同時，這個藝術展給你一個機會與當地藝術家聯繫，欣賞精美的藝術品。</p>
+<p></p>
+<p>讀賣巨人棒球賽在東京巨蛋</p>
+<p></p>
+<p>在東京巨蛋內，讀賣巨人棒球賽正在如火如荼地進行。日本的棒球賽是一種獨特的體驗，不論你是誰，都會被精彩的比賽和觀眾的熱情所感染。</p>
